--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "domain-developer-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --progress",
+    "start": "npm run build; node .",
     "dev": "webpack-dev-server --content-base public/ --inline --hot --port 8000"
   },
   "author": "Ruchira Jayasekara <ruchira088@gmail.com>",
