--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-env": "^1.2.1",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.26.4",
+    "extract-text-webpack-plugin": "^2.1.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.13.2",
