--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.26.4",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
     "node-sass": "^4.5.0",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.13.2",
